--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ html, body {
   margin: 0;
   border: 0;
   padding: 0;
-  background-color: #fff;
+  background-color: rgb(231, 235, 37);
 }
 
 main {
@@ -18,4 +18,9 @@ main {
 main > h1 {
   text-align: center;
   font-size: 3.5em;
+}
+
+main > h2 {
+  text-align: center;
+  font-size: 2.5em;
 }
